nohup.out
  File "/home/pi/Desktop/uwubot/uwubot.py", line 6
    <<<<<<< HEAD
     ^
SyntaxError: invalid syntax
uwubot starting!
Command: !uwu
uwubot starting!
Command: !uwu
Command: !uwu
Command: !uwu
Command: !uwu
uwubot starting!
Command: !uwu
Command: !uwu
Command: !uwu
Command: !uwu
Command: !uwu
